fix: definitive slider responsiveness and canvas cropping fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,7 +32,7 @@
 
 @layer components {
   .reecap-slider {
-    @apply w-full h-8 appearance-none cursor-pointer outline-none rounded-full relative z-10 pointer-events-auto bg-transparent;
+    @apply w-full h-10 appearance-none cursor-pointer outline-none rounded-full relative z-10 pointer-events-auto bg-transparent;
     -webkit-appearance: none;
     margin: 0;
   }
